lade till en sak som gör att när man öppnar ett projekt så öppnas den i en ny tab

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                     <li class="dropdown">
                         <a class="nav-link" href="#">Uppgifter</a>
                         <ul>
-                            <li><a class="nav-link" href="/assignments/uppgift1/index.html">Uppgift 1: Hello World</a></li>
-                            <li><a class="nav-link" href="/assignments/uppgift2/index.html">Uppgift 2: Grundläggande element</a></li>
-                            <li><a class="nav-link" href="/assignments/uppgift3/index.html">Uppgift 3: Sökvägar &amp; länkar</a></li>
-                            <li><a class="nav-link" href="/assignments/uppgift4/index.html">Uppgift 4: Img &amp; video</a></li>
-                            <li><a class="nav-link" href="/assignments/uppgift5/index.html">Uppgift 5: flex</a></li>
-                            <li><a class="nav-link" href="/assignments/uppgift6/index.html">Uppgift 6: grid</a></li>
+                            <li><a class="nav-link" href="/assignments/uppgift1/index.html" target="_blank">Uppgift 1: Hello World</a></li>
+                            <li><a class="nav-link" href="/assignments/uppgift2/index.html" target="_blank">Uppgift 2: Grundläggande element</a></li>
+                            <li><a class="nav-link" href="/assignments/uppgift3/index.html" target="_blank">Uppgift 3: Sökvägar &amp; länkar</a></li>
+                            <li><a class="nav-link" href="/assignments/uppgift4/index.html" target="_blank">Uppgift 4: Img &amp; video</a></li>
+                            <li><a class="nav-link" href="/assignments/uppgift5/index.html" target="_blank">Uppgift 5: flex</a></li>
+                            <li><a class="nav-link" href="/assignments/uppgift6/index.html" target="_blank">Uppgift 6: grid</a></li>
                         </ul>
                     </li> 
                     <li class="show-border"><a class="nav-link" href="#">Projekt 1</a></li>
