fixed all buttons in main site and added ways to get back to the main site in uppgift 2, 3, 4 and 5

--- a/assignments/uppgift3/index.html
+++ b/assignments/uppgift3/index.html
@@ -12,10 +12,10 @@
         <nav> <!-- meny -->
             <ul class="primary-navigation">
                 <img class="logo" alt="hehe" src="img/image.png" width="5%">
-                <li>home</li>
-                <li>project</li>
-                <li>help</li>
-                <li>about</li>
+                <a href="/">home</a>
+                <a href="#bottom">project</a>
+                <a href="#bottom">help</a>
+                <a href="/about.html">about</a>
                 <a href="#bottom">to the bottom!</a>
             </ul>
         </nav>
