--- a/assignments/uppgift5/index.html
+++ b/assignments/uppgift5/index.html
@@ -16,10 +16,10 @@
             </div>
             
             <ul class="primary-navigation">
-                <a href="#bottom">home</a>
+                <a href="/">home</a>
                 <a href="#bottom">project</a>
                 <a href="#bottom">help</a>
-                <a href="#bottom">about</a>
+                <a href="/about.html">about</a>
                 <a href="#bottom">to the bottom!</a>
             </ul>
             <div class="emptyspot">
