--- a/index.html
+++ b/index.html
@@ -79,35 +79,36 @@
     <header>
     </header>
     <main>
-        <div class="">
+        <div class="cards">
             <button class="portfolio-card" onclick="window.open('assignments/uppgift1/index.html','_blank');">
-                <h3>uppgift 1</h3>
-                <p>första uppgiften</p>
+                <span>uppgift 1</span>
+                <span>första uppgiften</span>
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift2/index.html','_blank');">
-                <h3>uppgift 2</h3>
-                <p>första uppgiften</p>
+                <span class="fake-h3">uppgift 2</span>
+                <span>Grundläggande element</span>
+                <span></span>
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift3/index.html','_blank');">
-                <h3>uppgift 3</h3>
-                <p>första uppgiften</p>
+                <span class="fake-h3">uppgift 3</span>
+                <span>Sökvägar &amp; länkar</span>
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift4/index.html','_blank');">
-                <h3>uppgift 4</h3>
-                <p>första uppgiften</p>
+                <span class="fake-h3">uppgift 4</span>
+                <span>Img &amp; video</span>
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift5/index.html','_blank');">
-                <h3>uppgift 5</h3>
-                <p>första uppgiften</p>
+                <span class="fake-h3">uppgift 5</span>
+                <span>flex</span>
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift6/index.html','_blank');">
-                <h3>uppgift 6</h3>
-                <p>första uppgiften</p>
+                <span class="fake-h3">uppgift 6</span>
+                <span>grid</span>
 
             </button>
         </div>
