--- a/assignments/uppgift2/index.html
+++ b/assignments/uppgift2/index.html
@@ -11,10 +11,11 @@
     <header> <!-- sidhuvud -->
         <nav> <!-- meny -->
             <ul class="primary-navigation">
-                <li>home</li>
-                <li>project</li>
-                <li>help</li>
-                <li>about</li>
+                <a href="/">home</a>
+                <a href="#bottom">project</a>
+                <a href="#bottom">help</a>
+                <a href="/about.html">about</a>
+                <a href="#bottom">to the bottom!</a>
 
             </ul>
         </nav>
