added images for the buttons and added titles for the older assignments

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
             <button class="portfolio-card" onclick="window.open('assignments/uppgift1/index.html','_blank');">
                 <span>uppgift 1</span>
                 <span>första uppgiften</span>
+                <img src="img/uppgift1.png" alt="">
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift2/index.html','_blank');">
                 <span class="fake-h3">uppgift 2</span>
                 <span>Grundläggande element</span>
-                <span></span>
+                <img src="" alt="">
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift3/index.html','_blank');">
