--- a/assignments/uppgift6/index.html
+++ b/assignments/uppgift6/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
 
-    <title>Gridland</title>
+    <title>Gridland/uppgift 6</title>
 
     <link rel="stylesheet" href="style.css">
 
