--- a/index.html
+++ b/index.html
@@ -83,33 +83,37 @@
             <button class="portfolio-card" onclick="window.open('assignments/uppgift1/index.html','_blank');">
                 <span>uppgift 1</span>
                 <span>första uppgiften</span>
-                <img src="img/uppgift1.png" alt="">
+                <img src="img/uppgift1.png" alt="första uppgiften">
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift2/index.html','_blank');">
                 <span class="fake-h3">uppgift 2</span>
                 <span>Grundläggande element</span>
-                <img src="" alt="">
+                <img src="img/uppgift2.png" alt="andra uppgiften">
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift3/index.html','_blank');">
                 <span class="fake-h3">uppgift 3</span>
                 <span>Sökvägar &amp; länkar</span>
+                <img src="img/uppgift3.png" alt="tredje uppgiften">
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift4/index.html','_blank');">
                 <span class="fake-h3">uppgift 4</span>
                 <span>Img &amp; video</span>
+                <img src="img/uppgift4.png" alt="fjärde uppgiften">
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift5/index.html','_blank');">
                 <span class="fake-h3">uppgift 5</span>
                 <span>flex</span>
+                <img src="img/uppift5.png" alt="femte uppgiften">
 
             </button>
             <button class="portfolio-card" onclick="window.open('assignments/uppgift6/index.html','_blank');">
                 <span class="fake-h3">uppgift 6</span>
                 <span>grid</span>
+                <img src="img/uppgift6.png" alt="sjätte uppgiften">
 
             </button>
         </div>
