--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <p class="logo-brand">Alessandro Muller Portfolio</p>
         </div>
         <ul class="primary-navigation" id="primary-navigation">
-            <li><a class="nav-link" href="index.html">Hem</a></li>
+            <li><a class="nav-link" href="/">Hem</a></li>
             <!-- dropdown-meny skapas med dropdown-klass -->
             <li class="dropdown">
                 <a class="nav-link" href="#">Portfolio</a>
