--- a/assignments/uppgift1/index.html
+++ b/assignments/uppgift1/index.html
@@ -27,6 +27,7 @@
     <h1> only one title per page </h1>
     <p><strong> hi i'm strong </strong></p> <!-- inline styling -->
 
+    <a href="/">return?</a>
     <p> a paragraph.</p>
 
     <h2> subhead 1 </h2>
