--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="logo-brand">Alessandro Muller Portfolio</p>
         </div>
         <ul class="primary-navigation" id="primary-navigation">
-            <li><a class="nav-link" href="index.html">Hem</a></li>
+            <li><a class="nav-link" href="/">Hem</a></li>
             <!-- dropdown-meny skapas med dropdown-klass -->
             <li class="dropdown">
                 <a class="nav-link" href="#">Portfolio</a>
@@ -79,46 +79,85 @@
     <header>
     </header>
     <main>
-        <div class="cards">
-            <button class="portfolio-card" onclick="window.open('assignments/uppgift1/index.html','_blank');">
-                <span>uppgift 1</span>
-                <span>första uppgiften</span>
-                <img src="img/uppgift1.png" alt="första uppgiften">
+        <section>
+            <article>
 
-            </button>
-            <button class="portfolio-card" onclick="window.open('assignments/uppgift2/index.html','_blank');">
-                <span class="fake-h3">uppgift 2</span>
-                <span>Grundläggande element</span>
-                <img src="img/uppgift2.png" alt="andra uppgiften">
+                <H1>Portfolio</H1>
 
-            </button>
-            <button class="portfolio-card" onclick="window.open('assignments/uppgift3/index.html','_blank');">
-                <span class="fake-h3">uppgift 3</span>
-                <span>Sökvägar &amp; länkar</span>
-                <img src="img/uppgift3.png" alt="tredje uppgiften">
+                <p>Här finns alla uppgifter jag har gjort under min tid på webbutveckling 1</p>
 
-            </button>
-            <button class="portfolio-card" onclick="window.open('assignments/uppgift4/index.html','_blank');">
-                <span class="fake-h3">uppgift 4</span>
-                <span>Img &amp; video</span>
-                <img src="img/uppgift4.png" alt="fjärde uppgiften">
+                <h2>Projekt</h2>
+            </article>
 
-            </button>
-            <button class="portfolio-card" onclick="window.open('assignments/uppgift5/index.html','_blank');">
-                <span class="fake-h3">uppgift 5</span>
-                <span>flex</span>
-                <img src="img/uppift5.png" alt="femte uppgiften">
 
-            </button>
-            <button class="portfolio-card" onclick="window.open('assignments/uppgift6/index.html','_blank');">
-                <span class="fake-h3">uppgift 6</span>
-                <span>grid</span>
-                <img src="img/uppgift6.png" alt="sjätte uppgiften">
 
-            </button>
-        </div>
+            <div class="cards">
+
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift1/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 1</span>
+
+                    <span class="button-text">första uppgiften</span>
+
+                    <img class="card-img" src="img/uppgift1.png" alt="första uppgiften">
+
+                </button>
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift2/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 2</span>
+
+                    <span class="button-text">Grundläggande element</span>
+
+                    <img class="card-img" src="img/uppgift2.png" alt="andra uppgiften">
+
+                </button>
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift3/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 3</span>
+
+                    <span class="button-text">Sökvägar &amp; länkar</span>
+
+                    <img class="card-img" src="img/uppgift3.png" alt="tredje uppgiften">
+
+                </button>
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift4/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 4</span>
+
+                    <span class="button-text">Img &amp; video</span>
+
+                    <img class="card-img" src="img/uppgift4.png" alt="fjärde uppgiften">
+
+                </button>
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift5/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 5</span>
+                    <span class="button-text">flex</span>
+
+                    <img class="card-img" src="img/uppift5.png" alt="femte uppgiften">
+
+                </button>
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift6/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 6</span>
+
+                    <span class="button-text">grid</span>
+
+                    <img class="card-img" src="img/uppgift6.png" alt="sjätte uppgiften">
+
+                </button>
+            </div>
+        </section>
+        
     </main>
     <footer>
+        <div>
+            <p> good stuff! </p>
+            <a href="https://www.youtube.com/watch?v=RSMMU2wX0Bk">to a really cool song!</a> <!-- absolute link -->
+            <a href="img/b5647fc7033f75b5cd70e841f92dc9b0.jpg" download> download funny image!</a>
+            <a href="mailto:alessandro.muller@elev.ga.ntig.se"> contact me!</a>
+            <a href="#"> back to start!</a>
+        </div>
     </footer>
 </body>
 
