--- a/assignments/uppgift6/index.html
+++ b/assignments/uppgift6/index.html
@@ -21,8 +21,8 @@
             <div>
                 <ul class="primary-navigation">
                     <li><a class="nav-link">products</a></li>
-                    <li><a class="nav-link">about us</a></li>
-                    <li><a class="nav-link">home</a></li>
+                    <li><a class="nav-link" href="/about.html">about us</a></li>
+                    <li><a class="nav-link" href="/">home</a></li>
                 </ul>
             </div>
         </nav>
