--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
                     <img class="card-img" src="img/uppgift6.png" alt="sjätte uppgiften">
 
                 </button>
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift7/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 7</span>
+
+                    <span class="button-text">position</span>
+
+                    <img class="card-img" src="img/uppgift7.png" alt="sjunde uppgiften">
+
+                </button>
             </div>
         </section>
         
