uppgift 8 uppe och bilder till uppgiferna uppe

--- a/index.html
+++ b/index.html
@@ -155,6 +155,15 @@
                     <img class="card-img" src="img/uppgift7.png" alt="sjunde uppgiften">
 
                 </button>
+                <button class="portfolio-card" onclick="window.open('assignments/uppgift8/index.html','_blank');">
+
+                    <span class="fake-h3">uppgift 8</span>
+
+                    <span class="button-text">animation</span>
+
+                    <img class="card-img" src="img/uppgift8.png" alt="åttonde uppgiften">
+
+                </button>
             </div>
         </section>
         
