--- a/assignments/projekt2/index.html
+++ b/assignments/projekt2/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt 2</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
+
 <body>
     <header>
-        <nav>
+        <nav class="container">
             <div class="flexthingy">
                 <img class="logo" src="img/p2logo.svg" alt="Projekt 2 Logo">
                 <p>Projekt 2</p>
             </div>
             <ul class="primary-navigation">
                 <li><a href="/">Hem</a></li>
-                <li><a href="#bottom">Grunderna</a></li>
+                <li><a href="grunder.html">Grunderna</a></li>
                 <li><a href="#bottom">Historia</a></li>
                 <li><a href="/about.html">Tillgänglighet</a></li>
                 <li><a href="#bottom">Hur funkar det?</a></li>
@@ -28,18 +29,97 @@
     <main>
         <section class="hero">
             <div class="hero-text">
-                <h1>HTMLs historia</h1>
-                <p>Webben föddes i början på 1990-talet när Tim Berners-Lee, en brittisk ingenjör, utvecklade World Wide Web (WWW). Han arbetade på CERN, där han ville skapa ett sätt för forskare att enkelt dela och få tillgång till information över internet.</p>
+                <h1 class="title">HTMLs historia</h1>
+                <p>Webben föddes i början på 1990-talet när Tim Berners-Lee, en brittisk ingenjör, utvecklade World Wide
+                    Web (WWW). Han arbetade på CERN, där han ville skapa ett sätt för forskare att enkelt dela och få
+                    tillgång till information över internet.</p>
             </div>
             <img src="img/hero2.webp" alt="Bild på halvöppen dator">
         </section>
+
+        <article class="maincontent">
+            <h2>Varifrån kommer internet?</h2>
+            <p>Internet har sina rötter i militära projekt, som t.ex. ARPANET, vilket utvecklades under 1960-talet av
+                det amerikanska försvaret. Syftet var att skapa ett robust kommunikationssystem som kunde fungera även
+                om delar av nätverket gick ner. Detta lade grunden för det moderna internet.</p>
+        </article>
+        <article class="maincontent">
+            <h2>Vad är World Wide Web?</h2>
+            <p>World Wide Web (eller WWW), är ett system av webbplatser och webbsidor som är kopplade genom hyperlänkar
+                och som nås via internet. Medan internet är infrastrukturen som möjliggör dataöverföring, är WWW det
+                visuella gränssnittet av information som användare interagerar med, vilket gör det möjligt att navigera
+                och interagera med innehåll online.</p>
+        </article>
+        <article class="maincontentwimg">
+            <div class="text">
+                <h2>Tidigt 2000-tal</h2>
+                <p>Under tidigt 2000-tal fortsatte webben att utvecklas snabbt. Nya teknologier och
+                    standarder började dyka
+                    upp, vilket gjorde det möjligt att bygga mer komplexa och interaktiva webbplatser. Detta var också
+                    perioden när sociala medier började ta form, vilket förändrade hur människor interagerade online och
+                    delade information.</p>
+            </div>
+            <img class="contentimg" src="img/Screenshot 2025-03-21 102224.png" alt="bild på en 2000s hemsida">
+        </article>
+        <article class="maincontent">
+            <h2>Vad är W3C?</h2>
+            <p>Organisationen W3C (World Wide Web Consortium) samlar företag, forskningsinstitutioner och andra
+                intressenter för att skapa riktlinjer och specifikationer för webbstandarder, såsom HTML, CSS och andra
+                webbrelaterade teknologier. Genom att sätta standarder hjälper W3C till att främja innovation och
+                säkerställa att webben fortsätter att utvecklas på ett sätt som är kompatibelt och användarvänligt.</p>
+        </article>
+        <article class="maincontent">
+            <h2>JavaScript och DOM</h2>
+            <p>För att göra webbsidor mer interaktiva började utvecklare runt 1995 använda JavaScript, ett
+                programmeringsspråk som gör det möjligt att skapa dynamiska element på webbplatser. JavaScript fungerar
+                tillsammans med DOM (Document Object Model), som är en struktur som representerar HTML-dokumentet och
+                gör det möjligt för JavaScript att manipulera innehållet, stilen och strukturen på en webbsida.</p>
+        </article>
+
+        <article class="maincontentwimg">
+            <div class="text">
+                <h2>HTML5 och dess utveckling</h2>
+                <p>HTML5 började utvecklas 2004 och lanserades officiellt 2014, vilket markerade en stor uppgradering av
+                    språket. Denna version gjorde det möjligt för utvecklare att skapa mer avancerade och
+                    användarvänliga
+                    webbapplikationer utan behov av externa plugins. HTML5 inkluderade nya funktioner som video- och
+                    ljudstöd, geolocation och bättre formulärhantering.</p>
+            </div>
+        </article>
+        <article class="maincontentwimg">
+            <div class="text">
+                <h2>Utvecklingen av webben 2010–2019</h2>
+                <p>Mellan 2010 och 2019 fortsatte webben att växa och förändras dramatiskt. Under denna period ökade
+                    användningen av mobila enheter, vilket ledde till en stark efterfrågan på responsiv webbdesign för
+                    att
+                    anpassa webbplatser till olika skärmstorlekar. Dessutom blev CSS3 populärt, vilket gjorde det
+                    möjligt
+                    för utvecklare att skapa mer visuellt tilltalande och interaktiva webbplatser med avancerade
+                    animationer
+                    och layouter. JavaScript-bibliotek och ramverk som jQuery, Angular och React blev också vanliga och
+                    förenklade skapandet av komplexa webbapplikationer, inklusive så kallade single-page applications
+                    (SPA),
+                    där hela sidan laddas dynamiskt utan att behöva ladda om webbläsaren.
+                    År 2019 undertecknade WHATWG (Web Hypertext Application Technology Working Group) och W3C ett avtal
+                    om
+                    att samarbeta kring HTML5. Detta samarbete syftade till att säkerställa en enhetlig standard för
+                    HTML,
+                    vilket är viktigt för att webben ska fungera smidigt och effektivt över olika plattformar och
+                    enheter.
+                </p>
+                <img class="contentimg" src="img/webbutveckling.webp" alt="bild på utvecklare">
+            </div>
+        </article>
     </main>
 
     <footer id="bottom">
-        <p>Good stuff!</p>
-        <a href="https://www.youtube.com/watch?v=RSMMU2wX0Bk">To a really cool song!</a>
-        <a href="mailto:alessandro.muller@elev.ga.ntig.se">Contact me!</a>
-        <a href="#">Back to start!</a>
+        <div class="container">
+            <p>Good stuff!</p>
+            <a href="https://www.youtube.com/watch?v=RSMMU2wX0Bk">To a really cool song!</a>
+            <a href="mailto:alessandro.muller@elev.ga.ntig.se">Contact me!</a>
+            <a href="#">Back to start!</a>
+        </div>
     </footer>
 </body>
+
 </html>
