--- a/assignments/projekt2/index.html
+++ b/assignments/projekt2/index.html
@@ -18,8 +18,7 @@
             <ul class="primary-navigation">
                 <li><a href="/">Hem</a></li>
                 <li><a href="grunder.html">Grunderna</a></li>
-                <li><a href="#bottom">Historia</a></li>
-                <li><a href="/about.html">Tillgänglighet</a></li>
+                <li><a href="tillgänglighet.html">Tillgänglighet</a></li>
                 <li><a href="#bottom">Hur funkar det?</a></li>
                 <li><a href="#bottom">Kontakt</a></li>
             </ul>
@@ -30,7 +29,7 @@
         <section class="hero">
             <div class="hero-text">
                 <h1 class="title">HTMLs historia</h1>
-                <p>Webben föddes i början på 1990-talet när Tim Berners-Lee, en brittisk ingenjör, utvecklade World Wide
+                <p class="heroclump">Webben föddes i början på 1990-talet när Tim Berners-Lee, en brittisk ingenjör, utvecklade World Wide
                     Web (WWW). Han arbetade på CERN, där han ville skapa ett sätt för forskare att enkelt dela och få
                     tillgång till information över internet.</p>
             </div>
@@ -107,8 +106,8 @@
                     vilket är viktigt för att webben ska fungera smidigt och effektivt över olika plattformar och
                     enheter.
                 </p>
-                <img class="contentimg" src="img/webbutveckling.webp" alt="bild på utvecklare">
             </div>
+            <img class="contentimg" src="img/webbutveckling.webp" alt="bild på utvecklare">
         </article>
     </main>
 
