--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </ul>
                     </li>
                     <li class="show-border"><a class="nav-link" href="#">Projekt 1</a></li>
-                    <li><a class="nav-link" href="#">Större Projekt 2</a></li>
+                    <li><a class="nav-link" href="/assignments/projekt2/index.html">Större Projekt 2</a></li>
                     <li><a class="nav-link" href="#">Största Projekt 3</a></li>
                 </ul>
             </li>
