--- a/assignments/projekt2/index.html
+++ b/assignments/projekt2/index.html
@@ -75,7 +75,7 @@
                 gör det möjligt för JavaScript att manipulera innehållet, stilen och strukturen på en webbsida.</p>
         </article>
 
-        <article class="maincontentwimg">
+        <article class="maincontent">
             <div class="text">
                 <h2>HTML5 och dess utveckling</h2>
                 <p>HTML5 började utvecklas 2004 och lanserades officiellt 2014, vilket markerade en stor uppgradering av
