stora uppdateringar för p3 responsivitet

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </li>
                     <li class="show-border"><a class="nav-link" href="#">Projekt 1</a></li>
                     <li><a class="nav-link" href="/assignments/projekt2/index.html">Större Projekt 2</a></li>
-                    <li><a class="nav-link" href="#">Största Projekt 3</a></li>
+                    <li><a class="nav-link" href="/assignments/responsive-main/index.html">Största Projekt 3</a></li>
                 </ul>
             </li>
             <li><a class="nav-link" href="help.html">Hjälp</a></li>
